2019-06-05  Theron T. Trout  <theron.trout@stormfish.io>

	* src/server/start-uplink.sh, src/server/stop-uplink.sh: Added scripts to
	start and stop uplink.

	* src/server/basic_proxy.py: Changed temporary server key filename to
	aurora-server.key.  The key file in ./src/server/public_keys/aurora-server.key
	will be used to validate the server trust relationship.

2019-05-08  Theron T. Trout  <theron.trout@stormfish.io>

	* docker/build.sh: Added script to build aurora-net docker image.

	* docker/aurora-net-image/Dockerfile: Added Dockerfile to build aurora-net image.

	* -: Improved comments and documentation.

2019-04-16  Theron T. Trout  <theron.trout@stormfish.io>

	* -: Implemented CurveZMQ crypto to CRA uplink connections.
	Added warning text to help prevent users from overwriting and losing their
	Added scripts for generating local server site certificates.

2019-04-12  Theron T. Trout  <theron.trout@stormfish.io>

	* -: Improved aurora_net_cra_client.py test code.
	Implemented a simple, asynchronous client libray. Added pub and sub test code.
	Renamed socket_a to socket_in and socket_b to socket_out.

2019-04-10  Theron T. Trout  <theron.trout@stormfish.io>

	* -: Project Initiated