@@ -37,9 +37,9 @@ mirror_socket_url = tcp://0.0.0.0:9105
 socket_in_type = XSUB
 socket_in_mode = CONNECT
 socket_in_url = tcp://aurora-net-local-server-xsub:9103
-socket_a1_type = XSUB
-socket_a1_mode = CONNECT
-socket_a1_url = tcp://aurora-net-cra-downlink:9106
+socket_in1_type = XSUB
+socket_in1_mode = CONNECT
+socket_in1_url = tcp://aurora-net-cra-downlink:9106
 socket_out_type = XPUB
 socket_out_mode = BIND
 socket_out_url = tcp://0.0.0.0:9102
@@ -53,15 +53,18 @@ socket_in_mode = CONNECT
 socket_in_url = tcp://aurora-net-local-server-xsub:9103
 socket_out_type = XPUB
 socket_out_mode = CONNECT
-socket_out_url = tcp://tbd:9101
+socket_out_url = tcp://TBD:9101
+socket_out_use_curve = True
 mirror_socket_type = XPUB
 mirror_socket_mode = BIND
 mirror_socket_url = tcp://0.0.0.0:9107
+use_curve = True
 
 [cra_downlink]
 socket_in_type = XSUB
 socket_in_mode = CONNECT
-socket_in_url = tcp://tbd:9102
+socket_in_url = tcp://TBD:9102
+socket_in_use_curve = True
 socket_out_type = XPUB
 socket_out_mode = BIND
 socket_out_url = tcp://0.0.0.0:9106
